dask-gateway/kustomization-k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dask-gateway-k8s-ingress
spec:
  ingressClassName: public
  rules:
  - host: dask-gateway-k8s.geddes.rcac.purdue.edu
    http:
      paths:
      - backend:
          service:
            name: traefik-dask-gateway-k8s
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
